--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = '1.0'
+    version = '1.0.1'
     ext {
-        appName = "my-gdx-game"
+        appName = "unciv-game"
         gdxVersion = '1.9.6'
         roboVMVersion = '2.3.1'
         box2DLightsVersion = '1.4'
