--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -55,5 +55,6 @@ task afterEclipseImport(description: "Post processing after project generation",
 }
 
 dependencies {
+    compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
     compile project(path: ':core')
 }
