Added google repo to allProjects.repositories in build.grade, SO says this should fix the build

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ allprojects {
     }
 
     repositories {
+        google()
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
