Added debug keystore generation to travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  - keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000
 
 cache:
   directories:
