Added jcenter as dependency in allprojects.repositories, should fix the 'Could not find org.jetbrains.trove4j:trove4j:20160824' error in Travis

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ allprojects {
 
     repositories {
         google()
+        jcenter()
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
