Added Landship, the first Armor unit! Added promotions for Armor units

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,9 @@ android {
         versionName "2.10.8"
     }
 
+    // Had to add this crap for Travis to build, it wanted to sign the app
+    // but couldn't create the debug keystore for some reason
+
     signingConfigs {
         debug {
             storeFile rootProject.file('debug.keystore')
