--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ project(":desktop") {
 
 project(":android") {
     apply plugin: "android"
-    //apply plugin: "kotlin-android"
+    //apply plugin: "kotlin-android" // This seems to have problems in Gradle 4.6
 
     configurations { natives }
 
