Added Replacable Parts tech and Great War Infantry Musketman now upgrades to Rifleman Solved more rare concurrency problems

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ gradle.properties
 SaveFiles/
 android/android-release.apk
 android/assets/GameSettings.json
+android/release/output.json
+android/release/android-release.apk
