--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
 language: android
 
+android:
+  components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    # - tools
+    # - platform-tools
+
+    # The BuildTools version used by your project
+    - build-tools-28.0.3
+
+    # The SDK version used to compile your project
+    - android-28
+
+    
 jdk:
   - oraclejdk8
 
 before_install:
  - chmod +x gradlew
- 
-install:
-  - echo yes | sdkmanager "tools" &>/dev/null
-  - echo yes | sdkmanager "platform-tools" &>/dev/null
-  - echo yes | sdkmanager "build-tools;28.0.3" &>/dev/null
-  - echo yes | sdkmanager "platforms;android-26" &>/dev/null
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
