MoveHereButton creation deferred to main thread, in order to LibGDX errors caused by concurrent UI alteration

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ android/android-release.apk
 android/assets/GameSettings.json
 android/release/output.json
 android/release/android-release.apk
+android/release/release/android.aab
