Chinese font downloaded per-use basis - makes the android app require Internet permissions, but that was coming anyway

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ android/assets/GameSettings.json
 android/release/output.json
 android/release/android-release.apk
 android/release/release/android.aab
+android/assets/fonts/
