--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-sdk/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/uncivicon2"
@@ -18,6 +20,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
