Added some missing translations aab/apk now doesn't einclude local debug files Maybe solved resume problem on Chrome OS (see issue 322), needs to be checked

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,8 +39,20 @@ android {
 
     buildTypes {
         release {
+            // Don't add local save files and fonts to release, obviously
+            aaptOptions {
+                ignoreAssetsPattern "!SaveFiles:!fonts"
+            }
+        
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            // Don't add local save files and fonts to release, obviously
+            aaptOptions {
+                ignoreAssetsPattern "!SaveFiles:!fonts"
+            }
         }
     }
 }
