Google suspended the app because of "Impersonation" violation =( Changed library name from com.unciv.game to com.unciv.app for app change

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.unciv.game"
+        applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 185
@@ -104,7 +104,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.unciv.game/AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.unciv.app/AndroidLauncher'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
