No height difference between hills and hills with jungle/forest

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ android/release/output.json
 android/release/android-release.apk
 android/release/release/android.aab
 android/assets/fonts/
+android/release/android.aab
