--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ android/release/android-release.apk
 android/release/release/android.aab
 android/assets/fonts/
 android/release/android.aab
+android/assets/maps/
