--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 233
-        versionName "2.15.0-patch2"
+        versionCode 234
+        versionName "2.16.0"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
