--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 236
-        versionName "2.16.0"
+        versionName "2.16.0-patch1"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
