--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 248
-        versionName "2.16.10-patch1"
+        versionCode 249
+        versionName "2.17.0"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
