--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 263
-        versionName "2.17.10-patch2"
+        versionCode 264
+        versionName "2.17.11"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
