Domination-victory AI declare war on close civs even when having an advantage that isn't an absolute advantage, and declare war on civs that are situated far away if they are weak enough and there's no one close by

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 264
-        versionName "2.17.11"
+        versionCode 266
+        versionName "2.17.12-patch1"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
