--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 266
-        versionName "2.17.12-patch1"
+        versionCode 267
+        versionName "2.17.13"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
