City founding tutorial no longer activates if the AI founded a city before you

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,4 @@ android/release/release/android.aab
 android/assets/fonts/
 android/release/android.aab
 android/assets/maps/
+android/release/android.aab.sig
