Added "user id from clipboard" button in New Game screen Fixed other user id problems

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
     repositories {
         // 以下四行代码为阿里gradle 源
+        // Chinese mirrors for quicker loading for chinese devs
         maven{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven{ url 'https://maven.aliyun.com/repository/google'}
         maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
@@ -42,6 +43,7 @@ allprojects {
 
     repositories {
         // 以下四行代码为阿里gradle 源
+        // Chinese mirrors for quicker loading for chinese devs
         maven{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven{ url 'https://maven.aliyun.com/repository/google'}
         maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
