--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ android/assets/fonts/
 android/release/android.aab
 android/assets/maps/
 android/release/android.aab.sig
+android/release/android-release.aab
