--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 301
-        versionName "3.1.0"
+        versionName "3.1.0-patch1"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
