--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 306
-        versionName "3.1.4"
+        versionCode 307
+        versionName "3.1.4-patch1"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
