Resolved #1177 - Great Improvements now provide Strategic resources APK no longer bundles maps in assets

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ android {
         release {
             // Don't add local save files and fonts to release, obviously
             aaptOptions {
-                ignoreAssetsPattern "!SaveFiles:!fonts"
+                ignoreAssetsPattern "!SaveFiles:!fonts:!maps"
             }
         
             minifyEnabled false
@@ -51,7 +51,7 @@ android {
         debug {
             // Don't add local save files and fonts to release, obviously
             aaptOptions {
-                ignoreAssetsPattern "!SaveFiles:!fonts"
+                ignoreAssetsPattern "!SaveFiles:!fonts:!maps"
             }
         }
     }
