Added tests for Travis to fail if the jsons don't parse or something

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ android/release/android.aab
 android/assets/maps/
 android/release/android.aab.sig
 android/release/android-release.aab
+tests/build/
