City-state alliance Bugfix

--- a/build.gradle
+++ b/build.gradle
@@ -151,20 +151,20 @@ project(":core") {
              */
 
 
-            compile project(":core")
+            implementation project(":core")
 
-            compile "junit:junit:4.12"
-            compile "org.mockito:mockito-all:1.9.5"
+            implementation "junit:junit:4.12"
+            implementation "org.mockito:mockito-all:1.9.5"
 
-            compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-            compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+            implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+            implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
 
-            testCompile 'junit:junit:4.12'
-            testCompile "org.mockito:mockito-all:1.9.5"
+            testImplementation 'junit:junit:4.12'
+            testImplementation "org.mockito:mockito-all:1.9.5"
 
-            testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-            testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
-            testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+            testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+            testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+            testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         }
     }}
 
