--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -55,6 +55,6 @@ task afterEclipseImport(description: "Post processing after project generation",
 }
 
 dependencies {
-    compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-    compile project(path: ':core')
+    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+    implementation project(path: ':core')
 }
