Gradle changes so the desktop:dist will work. still not 100% since I can't get it to recognize Kotlin yet

--- a/build.gradle
+++ b/build.gradle
@@ -163,8 +163,8 @@ project(":core") {
             testImplementation "org.mockito:mockito-all:1.9.5"
 
             testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-            testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-            testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+            testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+            testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         }
     }}
 
