--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 324
-        versionName "3.2.1-patch1"
+        versionCode 325
+        versionName "3.2.2"
     }
 
     // Had to add this crap for Travis to build, it wanted to sign the app
