Checking if we can remove some lines from the Travis file to speed up build time

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -29,6 +29,7 @@ task dist(type: Jar) {
     // see Laurent1967's comment on https://github.com/libgdx/libgdx/issues/5491
     from {configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }}
     from files(project.assetsDir)
+    archiveFileName  = "${appName}.jar"
  
     manifest {
         attributes 'Main-Class': project.mainClassName
