--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,14 @@
 language: android
 dist: trusty # For oracleJDK fail errors, as per advice from https://travis-ci.community/t/error-installing-oraclejdk8-expected-feature-release-number-in-range-of-9-to-14-but-got-8/3766/6
 
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - tools
-    - platform-tools
-
-    # The BuildTools version used by your project
-    - build-tools-29.0.2
-
-    # The SDK version used to compile your project
-    - android-29
-
-    
 jdk:
   - oraclejdk8
+
+android:
+  components:
+    - build-tools-29.0.2 # The BuildTools version used by the project
+    - android-29 # The SDK version used to compile the project
+
 
 before_install:
  - chmod +x gradlew
