--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ allprojects {
 
     version = '1.0.1'
     ext {
-        appName = "unciv-game"
+        appName = "Unciv"
         gdxVersion = '1.9.10'
         roboVMVersion = '2.3.1'
         box2DLightsVersion = '1.4'
