Let's see if Travis handles the new script =)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,10 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
-    
+
+script:
+- "./gradlew test"
+- "./gradlew desktop:dist"
     
 deploy:
   provider: releases
