--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,16 @@ buildscript {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
-
+        maven{ url 'https://jitpack.io' } // for the anuken packr
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
+
+        // This is for wrapping the .jar file into a standalone executable
+        classpath "com.github.anuken:packr:-SNAPSHOT"
     }
 }
 
@@ -56,7 +59,6 @@ allprojects {
 project(":desktop") {
     apply plugin: "kotlin"
 
-
     dependencies {
         implementation project(":core")
         implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
@@ -67,6 +69,7 @@ project(":desktop") {
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion" // This iss so the JAR works with Kotlin
 
         implementation 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'
+
     }
 
 }
