--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,3 +1,6 @@
+import com.badlogicgames.packr.Packr
+import com.badlogicgames.packr.PackrConfig
+
 apply plugin: "kotlin"
 
 sourceCompatibility = 1.6
@@ -39,20 +42,20 @@ task dist(dependsOn: classes, type: Jar) {
     }
 }
 
-//task packrWindows(){
-//    PackrConfig config = new PackrConfig();
-//    config.platform = PackrConfig.Platform.Windows32;
-//    config.jdk = "/User/badlogic/Downloads/openjdk-for-mac.zip";
-//    config.executable = "myapp";
-//    config.classpath = Arrays.asList("myjar.jar");
-//    config.removePlatformLibs = config.classpath;
-//    config.mainClass = "com.my.app.MainClass";
-//    config.vmArgs = Arrays.asList("Xmx1G");
-//    config.minimizeJre = "soft";
-//    config.outDir = new File("out-mac");
-//
-//    new Packr().pack(config);
-//}
+task packrWindows(){
+    PackrConfig config = new PackrConfig()
+    config.platform = PackrConfig.Platform.Windows64
+    config.jdk = "https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip"
+    config.executable = "Unciv"
+    config.classpath = Arrays.asList("desktop/build/libs/${appName}.jar".toString())
+    config.removePlatformLibs = config.classpath
+    config.mainClass = project.ext.mainClassName
+    config.vmArgs = Arrays.asList("Xmx1G")
+    config.minimizeJre = "soft"
+    config.outDir = new File("desktop/packr")
+
+    new Packr().pack(config)
+}
 
 eclipse {
     project {
@@ -71,8 +74,3 @@ task afterEclipseImport(description: "Post processing after project generation",
     printer.print(classpath)
   }
 }
-//
-//dependencies {
-//    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-//    implementation project(path: ':core')
-//}
