--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -42,7 +42,7 @@ task dist(dependsOn: classes, type: Jar) {
     }
 }
 
-task packrWindows(){
+task packrWindows(dependsOn: dist){
     PackrConfig config = new PackrConfig()
     config.platform = PackrConfig.Platform.Windows64
     config.jdk = "https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip"
