--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -27,7 +27,7 @@ task debug(dependsOn: classes, type: JavaExec) {
     debug = true
 }
 
-task dist(dependsOn: classes, type: Jar) {
+task dist(dependsOn: classes, type: Jar) { // Compiles the jar file
     from files(sourceSets.main.output.resourcesDir)
     from files(sourceSets.main.output.classesDirs)
     // see Laurent1967's comment on https://github.com/libgdx/libgdx/issues/5491
@@ -49,8 +49,7 @@ for(platform in PackrConfig.Platform.values()) {
         def jarFile = "desktop/build/libs/${appName}.jar".toString()
         PackrConfig config = new PackrConfig()
         config.platform = platform
-        config.jdk = System.env.'JAVA_HOME'
-//        config.jdk = "https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip"
+        config.jdk = System.env.'JAVA_HOME' // For Travis
 //        config.jdk = "C:/Users/LENOVO/Downloads/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip"
         config.executable = "Unciv"
         config.classpath = Arrays.asList(jarFile)
@@ -78,10 +77,6 @@ for(platform in PackrConfig.Platform.values()) {
 }
 
 task packr(){
-//    finalizedBy "packrWindows64"
-//    doFirst{
-//        delete(file("packrCache"))
-//    }
     for(platform in PackrConfig.Platform.values())
         finalizedBy "packr${platform.toString()}"
 }
